<?xml version="1.0"?>
<package format="2">
  <name>rosbag_utils</name>
  <version>1.0.0</version>
  <description>
    Common post-processing tools for rosbags.
  </description>

  <author>Oliwier Melon</author>
  <maintainer email="omelon@robots.ox.ac.uk">Oliwier Melon</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_filters</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_octomap</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>grid_map_visualization</depend>
  <depend>pcl_ros</depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_bag</exec_depend>
</package>
