<?xml version="1.0"?>
<package format="2">
  <name>tf_remapper</name>
  <version>0.0.1</version>
  <description>
     Remap TFs
  </description>
  <author email="russell@robots.ox.ac.uk">Russell Buchanan</author>

  <maintainer email="russell@robots.ox.ac.uk">Russell Buchanan</maintainer>

  <license>GPL</license>

  <url type="repository">https://github.com/raabuchanan/tf_remapper</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>


</package>

